# camber

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  _camber_launcher.py  camber.spec  installer.iss  pyproject.toml
docs/: ROADMAP.md  architecture.md  make_user_guide.py
licenses/: camber-convert-LICENSE.txt
scripts/: build_exe.py  replay_csv.py  run_dev.py  seed_demo_data.py
src/camber/: logging_setup.py  main.py
src/camber/charts/: analysis_panel.py  chart_panel.py
src/camber/domain/: models.py
src/camber/extension_api/: api.py
src/camber/integrations/: sensor_import.py
src/camber/integrations/profiles/: daq-wide-30ch.json
src/camber/mapping/: map_panel.py
src/camber/resources/sample/: vanersborg_sample.csv
src/camber/services/: services.py
src/camber/storage/: db.py
src/camber/ui/: dashboard_panel.py  import_dialog.py  main_window.py  theme.py
tests/: test_bad_timestamps.py  test_chart_clip.py  test_db_path.py  test_frozen_startup.py  test_icon_path.py  test_robustness.py  test_thresholds.py
