[project]
name = "camber"
version = "0.1.0"
description = "Camber - open-source structural health monitoring platform for bridges and civil infrastructure"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "SQLAlchemy>=2.0",
  "pydantic>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pyqtgraph>=0.13",
  # camber-convert is added here when the converter is wired in (see AGENTS.md Task 1).
  # Until it is published to PyPI, install it editable from the sibling repo:
  #   pip install -e ../camber-convert
]

[project.scripts]
camber = "camber.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
