[project]
name = "camber"
version = "0.1.0"
description = "Camber - open-source structural health monitoring platform for bridges and civil infrastructure"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "SQLAlchemy>=2.0",
  "pydantic>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pyqtgraph>=0.13",
  # Sensor-file import (wide/multi-channel + tidy CSV) goes through camber-convert.
  # Its core is dependency-free (Parquet writing is the optional [parquet] extra,
  # which the app does not need). Until it is published to PyPI, install it
  # editable from the sibling repo:  pip install -e ../camber-convert
  "camber-convert>=0.1",
]

[project.scripts]
camber = "camber.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship import profiles and the bundled sample dataset inside the package.
camber = ["integrations/profiles/*.json", "resources/sample/*.csv"]
